integrations/treesitter-vibe/grammar.js
    source_file: ($) => repeat($._statement),

    // ── Statements ──────────────────────────────────────────────

    _statement: ($) =>
      choice(
        $.import_statement,
        $.export_statement,
        $.function_declaration,
        $.let_declaration,
        $.enum_declaration,
        $.suberror_declaration,
        $.struct_declaration,
        $.type_alias_declaration,
        $.trait_declaration,
        $.impl_declaration,
        $.test_block,
        $.bench_block,
        $.module_declaration,
        $.alias_declaration,
        $.expression_statement,
      ),

    import_statement: ($) =>
      prec.right(
        seq(
          "import",
          field("path", $.import_path),
          optional($.import_list),
        ),
      ),

    import_path: (_) =>
      token(
        choice(
          // relative: ./foo.vibe, ../foo.vibe, ../../lib/@vibe/parser
          /\.{1,2}\/(\.\.\/)*[a-zA-Z0-9_/.@-]+(#[a-zA-Z0-9_]+)?/,
          // absolute: /vibe/builtin/option.vibe
          /\/[a-zA-Z0-9_/.]+(\.[a-zA-Z]+)?/,
          // package: @vibe/compiler/core
          /@[a-zA-Z0-9_-]+(\/[a-zA-Z0-9_.-]+)+/,
        ),
      ),

    import_list: ($) =>
      seq("{", commaSep1($.import_specifier), "}"),

    import_specifier: ($) =>
      seq(
        optional("struct"),
        field("name", choice($.identifier, $.type_identifier)),
        optional(seq("as", field("alias", choice($.identifier, $.type_identifier)))),
      ),

    export_statement: ($) =>
      prec.right(
        choice(
          seq("export", "{", commaSep1($.identifier), "}"),
          seq("export", $.import_path, optional($.import_list)),
        ),
      ),

    let_declaration: ($) =>
      seq(
        optional("export"),
        "let",
        optional("rec"),
        optional("mut"),
        field("name", $.identifier),
        optional(seq(":", field("type", $._type_expression))),
        "=",
        field("value", $._expression),
      ),

    function_declaration: ($) =>
      seq(
        optional("export"),
        "fn",
        field("name", $.identifier),
        optional($.type_parameters),
        $.parameter_list,
        optional(seq("->", field("return_type", $._type_expression))),
        optional($.effect_annotation),
        field("body", $.block),
      ),

    enum_declaration: ($) =>
      seq(
        optional("export"),
        "enum",
        field("name", $.type_identifier),
        optional($.type_parameters),
        "{",
        repeat($.enum_variant),
        "}",
      ),

    enum_variant: ($) =>
      seq(
        field("name", $.type_identifier),
        optional(seq("(", sepBy1(",", $._type_expression), ")")),
        optional(";"),
      ),

    struct_declaration: ($) =>
      seq(
        optional("export"),
        "struct",
        field("name", $.type_identifier),
        optional($.type_parameters),
        "{",
        repeat($.struct_field),
        "}",
      ),

    struct_field: ($) =>
      seq(
        field("name", $.identifier),
        ":",
        field("type", $._type_expression),
        optional(choice(";", ",")),
      ),

    trait_declaration: ($) =>
      prec.left(
        seq(
          optional("export"),
          "trait",
          field("name", $.type_identifier),
          optional(seq(":", commaSep1($.type_identifier))),
        ),
      ),

    impl_declaration: ($) =>
      seq(
        "impl",
        optional($.type_parameters),
        field("trait", $.type_identifier),
        "for",
        field("type", $._type_expression),
      ),

    test_block: ($) =>
      seq("test", field("name", $.string), field("body", $.block)),

    expression_statement: ($) => $._expression,

    // ── Type Expressions ────────────────────────────────────────

    _type_expression: ($) =>
      choice(
        $.type_name,
        $.type_application,
        $.function_type,
        $.tuple_type,
        $.unit_type,
      ),

    type_name: ($) =>
      choice($.type_identifier, $.identifier),

    type_application: ($) =>
      seq($.type_identifier, "[", commaSep1($._type_expression), "]"),

    function_type: ($) =>
      prec.left(
        seq(
          "(",
          commaSep($._type_expression),
          ")",
          "->",
          $._type_expression,
          optional($.effect_annotation),
        ),
      ),

    effect_annotation: ($) =>
      seq(
        choice("with", "allows"),
        choice(
          seq("{", commaSep1(choice($.type_identifier, $.identifier)), "}"),
          seq(choice($.type_identifier, $.identifier), repeat(seq("+", choice($.type_identifier, $.identifier)))),
        ),
      ),

    // ── Expressions ─────────────────────────────────────────────

    _expression: ($) =>
      choice(
        $.primary_expression,
        $.binary_expression,
        $.unary_expression,
        $.call_expression,
        $.member_expression,
        $.index_expression,
        $.pipe_expression,
        $.assignment_expression,
        $.compound_assignment_expression,
        $.function_expression,
        $.if_expression,
        $.match_expression,
        $.while_expression,
        $.for_in_expression,
        $.loop_expression,
        $.handle_expression,
        $.throw_expression,
        $.break_expression,
        $.continue_expression,
        $.block,
      ),

    primary_expression: ($) =>
      choice(
        $.integer,
        $.float,
        $.string,
        $.character,
        $.boolean,
        $.unit_literal,
        $.identifier,
        $.type_identifier,
        $.namespace_identifier,
        $.qualified_identifier,
        $.tuple_expression,
        $.array_expression,
        $.record_expression,
        $.map_expression,
        $.struct_expression,
        $.parenthesized_expression,
      ),

    binary_expression: ($) =>
      choice(
        ...[
          ["||", PREC.OR],
          ["&&", PREC.AND],
          ["==", PREC.COMPARE],
          ["!=", PREC.COMPARE],
          ["<", PREC.COMPARE],
          ["<=", PREC.COMPARE],
          [">", PREC.COMPARE],
          [">=", PREC.COMPARE],
          ["|", PREC.BIT_OR],
          ["^", PREC.BIT_XOR],
          ["&", PREC.BIT_AND],
          ["<<", PREC.SHIFT],
          [">>", PREC.SHIFT],
          ["+", PREC.ADD],
          ["-", PREC.ADD],
          ["*", PREC.MUL],
          ["/", PREC.MUL],
          ["%", PREC.MUL],
        ].map(([op, precedence]) =>
          prec.left(
            precedence,
            seq(
              field("left", $._expression),
              field("operator", op),
              field("right", $._expression),
            ),
          ),
        ),
      ),

    call_expression: ($) =>
      prec(
        PREC.CALL,
        seq(
          field("function", $._expression),
          "(",
          field("arguments", commaSep($.argument)),
          ")",
        ),
      ),

    argument: ($) =>
      choice(
        $._expression,
        $.labeled_argument,
        $.spread_expression,
      ),

    index_expression: ($) =>
      prec(
        PREC.INDEX,
        seq(
          field("object", $._expression),
          "[",
          field("index", choice($._expression, $.slice)),
          "]",
        ),
      ),

    slice: ($) => seq(optional($._expression), ":", optional($._expression)),

    assignment_expression: ($) =>
      prec.right(
        PREC.ASSIGN,
        seq(
          field("left", choice($.identifier, $.index_expression, $.member_expression)),
          "=",
          field("right", $._expression),
        ),
      ),

    function_expression: ($) =>
      choice(
        seq(
          optional($.type_parameters),
          $.parameter_list,
          optional(seq("->", field("return_type", $._type_expression))),
          optional($.effect_annotation),
          field("body", $.block),
        ),
        seq($.parameter_list, "->", field("body", $.block)),
      ),

    parameter_list: ($) =>
      seq("(", commaSep($.parameter), ")"),

    parameter: ($) =>
      seq(
        field("name", $.identifier),
        optional(choice("~", "?")),
        optional(seq(":", field("type", $._type_expression))),
        optional(seq("=", field("default", $._expression))),
      ),

    if_expression: ($) =>
      prec.right(
        seq(
          "if",
          field("condition", $._expression),
          field("consequence", $.block),
          optional(seq("else", field("alternative", choice($.block, $.if_expression, $._expression)))),
        ),
      ),

    match_arm: ($) =>
      seq(
        field("pattern", $.pattern),
        optional(seq("if", field("guard", $._expression))),
        "=>",
        field("body", $._expression),
        optional(","),
      ),

    handle_expression: ($) =>
      seq(
        "handle",
        field("body", $.block),
        optional("with"),
        "{",
        repeat($.match_arm),
        "}",
      ),

    throw_expression: ($) =>
      seq("throw", "(", field("value", $._expression), ")"),

    block: ($) =>
      seq("{", repeat($._block_item), "}"),

    _block_item: ($) =>
      choice(
        $.let_expression,
        $._expression,
        ";",
      ),

    pattern: ($) =>
      choice(
        $.wildcard_pattern,
        $.binding_pattern,
        $.integer,
        $.float,
        $.string,
        $.boolean,
        $.constructor_pattern,
        $.tuple_pattern,
        $.record_pattern,
        $.or_pattern,
      ),

    wildcard_pattern: (_) => "_",

    constructor_pattern: ($) =>
      seq(
        field("name", choice($.type_identifier, $.qualified_identifier)),
        optional(
          choice(
            seq("(", commaSep($.pattern), ")"),
            seq("::", "{", commaSep($.struct_field_pattern), "}"),
          ),
        ),
      ),

    array_expression: ($) =>
      seq("[", commaSep(choice($._expression, $.spread_expression)), "]"),

    integer: (_) => token(choice(/[0-9]+/, /0[xX][0-9a-fA-F]+/)),

    character: (_) => token(/'([^'\\]|\\[ntr0'\\])'/),

    string: ($) =>
      seq(
        '"',
        repeat(
          choice(
            $.escape_sequence,
            $.interpolation,
            $.string_fragment,
          ),
        ),
        '"',
      ),

    string_fragment: (_) => token.immediate(prec(1, /[^"\\]+/)),

    interpolation: ($) =>
      seq(
        token.immediate("\\{"),
        $._expression,
        "}",
      ),

    identifier: (_) => /[a-z_][a-zA-Z0-9_]*/,

    type_identifier: (_) => /[A-Z][a-zA-Z0-9_]*/,

    qualified_identifier: ($) =>
      seq(
        choice($.type_identifier, $.namespace_identifier),
        "::",
        choice($.identifier, $.type_identifier),
      ),

    // ── Comments ────────────────────────────────────────────────
