integrations/treesitter-vibe/test/corpus/current_syntax.txt
================================================================================
package import and named function
================================================================================

import @vibe/core { array_empty }

fn empty_strings() -> Array[String] {
  array_empty()
}

--------------------------------------------------------------------------------

(source_file
  (import_statement
    path: (import_path)
    (import_list
      (import_specifier
        name: (identifier))))
  (function_declaration
    name: (identifier)
    (parameter_list)
    return_type: (type_application
      (type_identifier)
      (type_name
        (type_identifier)))
    body: (block
      (call_expression
        function: (primary_expression
          (identifier))))))

================================================================================
exported function with effects and test
================================================================================

export fn read_config(path: String) -> String with Fs {
  path
}

test "read_config returns the path" {
  assert_eq(read_config("x"), "x")
}

--------------------------------------------------------------------------------

(source_file
  (function_declaration
    name: (identifier)
    (parameter_list
      (parameter
        name: (identifier)
        type: (type_name
          (type_identifier))))
    return_type: (type_name
      (type_identifier))
    (effect_annotation
      (type_identifier))
    body: (block
      (primary_expression
        (identifier))))
  (test_block
    name: (string
      (string_fragment))
    body: (block
      (call_expression
        function: (primary_expression
          (identifier))
        arguments: (argument
          (call_expression
            function: (primary_expression
              (identifier))
            arguments: (argument
              (primary_expression
                (string
                  (string_fragment))))))
        arguments: (argument
          (primary_expression
            (string
              (string_fragment))))))))

================================================================================
type names in package imports
================================================================================

import @vibe/compiler/core {
  Expr, Pat, Stmt, TypeExpr
}

--------------------------------------------------------------------------------

(source_file
  (import_statement
    path: (import_path)
    (import_list
      (import_specifier
        name: (type_identifier))
      (import_specifier
        name: (type_identifier))
      (import_specifier
        name: (type_identifier))
      (import_specifier
        name: (type_identifier)))))

================================================================================
variant constructors in function bodies
================================================================================

fn selected(flag: Bool) -> Option[Int] {
  if flag { Some(1) } else { None }
}

--------------------------------------------------------------------------------

(source_file
  (function_declaration
    name: (identifier)
    (parameter_list
      (parameter
        name: (identifier)
        type: (type_name
          (type_identifier))))
    return_type: (type_application
      (type_identifier)
      (type_name
        (type_identifier)))
    body: (block
      (if_expression
        condition: (primary_expression
          (identifier))
        consequence: (block
          (call_expression
            function: (primary_expression
              (type_identifier))
            arguments: (argument
              (primary_expression
                (integer)))))
        alternative: (block
          (primary_expression
            (type_identifier)))))))

================================================================================
relative re-export and struct import
================================================================================

export ../../lib/@vibe/parser { Token, parse }
import @vibe/core { struct MutMap }

--------------------------------------------------------------------------------

(source_file (export_statement (import_path) (import_list (import_specifier name: (type_identifier)) (import_specifier name: (identifier)))) (import_statement path: (import_path) (import_list (import_specifier name: (type_identifier)))))

================================================================================
indexed assignment and slice
================================================================================

fn rewrite(box: Array[Int], text: String) -> String {
  box[0] = 3;
  text[0: 3]
}

--------------------------------------------------------------------------------

(source_file (function_declaration name: (identifier) (parameter_list (parameter name: (identifier) type: (type_application (type_identifier) (type_name (type_identifier)))) (parameter name: (identifier) type: (type_name (type_identifier)))) return_type: (type_name (type_identifier)) body: (block (assignment_expression left: (index_expression object: (primary_expression (identifier)) index: (primary_expression (integer))) right: (primary_expression (integer))) (index_expression object: (primary_expression (identifier)) index: (slice (primary_expression (integer)) (primary_expression (integer)))))))

================================================================================
exception handler
================================================================================

fn recover() -> Int {
  handle { throw("bad") } with { Exception::Throw(_) => 0 }
}

--------------------------------------------------------------------------------

(source_file (function_declaration name: (identifier) (parameter_list) return_type: (type_name (type_identifier)) body: (block (handle_expression body: (block (throw_expression value: (primary_expression (string (string_fragment))))) (match_arm pattern: (pattern (constructor_pattern name: (qualified_identifier (type_identifier) (type_identifier)) (pattern (wildcard_pattern)))) body: (primary_expression (integer)))))))

================================================================================
character literal
================================================================================

fn newline() -> Char { '\n' }

--------------------------------------------------------------------------------

(source_file (function_declaration name: (identifier) (parameter_list) return_type: (type_name (type_identifier)) body: (block (primary_expression (character)))))

================================================================================
function value with arrow body
================================================================================

let empty_sources: () -> Array[Int] = () -> { [1] }

--------------------------------------------------------------------------------

(source_file (let_declaration name: (identifier) type: (function_type (type_application (type_identifier) (type_name (type_identifier)))) value: (function_expression (parameter_list) body: (block (primary_expression (array_expression (primary_expression (integer))))))))

================================================================================
string interpolation with braces
================================================================================

fn tag(mode: Int) -> String { "mode \{mode}" }

--------------------------------------------------------------------------------

(source_file
  (function_declaration
    name: (identifier)
    (parameter_list
      (parameter
        name: (identifier)
        type: (type_name
          (type_identifier))))
    return_type: (type_name
      (type_identifier))
    body: (block
      (primary_expression
        (string
          (string_fragment)
          (interpolation
            (primary_expression
              (identifier))))))))
