integrations/treesitter-vibe/test/corpus/expressions.txt
================================================================================
integer literal
================================================================================

42

--------------------------------------------------------------------------------

(source_file
  (expression_statement
    (primary_expression
      (integer))))

================================================================================
binary operators with precedence
================================================================================

1 + 2 * 3

--------------------------------------------------------------------------------

(source_file
  (expression_statement
    (binary_expression
      left: (primary_expression
        (integer))
      right: (binary_expression
        left: (primary_expression
          (integer))
        right: (primary_expression
          (integer))))))

================================================================================
array literal
================================================================================

[1, 2, 3]

--------------------------------------------------------------------------------

(source_file
  (expression_statement
    (primary_expression
      (array_expression
        (primary_expression
          (integer))
        (primary_expression
          (integer))
        (primary_expression
          (integer))))))
