integrations/treesitter-vibe/test/corpus/imports.txt
================================================================================
import with list
================================================================================

import ./types.vibe { a, b }

--------------------------------------------------------------------------------

(source_file
  (import_statement
    path: (import_path)
    (import_list
      (import_specifier
        name: (identifier))
      (import_specifier
        name: (identifier)))))

================================================================================
export list
================================================================================

export { parse, lex }

--------------------------------------------------------------------------------

(source_file
  (export_statement
    (identifier)
    (identifier)))
